# AtelierAI

./: .dockerignore  .env.example  .flake8  .gitignore  .mcpindex  AGENT.md  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  collection-sync-workflow.md  docker-compose.yml  justfile  start.sh
.continue/: zai-config.yaml
.continue/agents/: new-config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/hooks/: serena-hooks.json
.serena/: project.yml
app/: check_duplicates_detailed.py  cleanup_and_retry.py  debug_bay_tags.py  debug_duplicates.py  debug_failed_images.py  debug_prompt_tags.py  debug_rescan_errors.py  debug_shion.py  dev-requirements.txt  entrypoint.sh  requirements.txt  run_fresh.sh  start.sh
app/backend/: config.py  (+9 more)
app/src/: pyproject.toml
app/src/atelierai/: __init__.py  config.py  platform_detect.py  task_manager.py
app/src/atelierai/civitai/: README.md  __init__.py  civitai.py  civitai_api.py  civitai_auth.py  civitai_image.py  civitai_models.py  civitai_search.py  civitai_search_spec.yaml  civitai_trpc.py  civitai_trpc_spec.yaml  civitai_trpc_v2.py  console_utils.py  http_client.py  rate_limiter.py
app/src/atelierai/utils/: __init__.py  png_repacker.py  prompt_phrases.py
app/src/civitai/: civitai_api.py  civitai_auth.py  civitai_image.py  civitai_trpc_v2.py
backend/: .gitignore  PROJECT_REORGANIZATION_COMPLETE.md  README.md  REORGANIZATION_COMPLETE.md  database.py  dev-requirements.txt  entrypoint.sh  image_data.py  image_processor.py  image_utils.py  main.py  models.py  requirements.txt  start.sh
frontend/: index.html
(+348 files in other folders)
